@@ -15,6 +15,8 @@ BUGS:
 - ;f seems broken after a page load
 - ;s saves the page rather than the image
 - :set! browser.urlbar.clickSelectsAll=true -> clicking in the location bar unfocuses it immediately
+- http://apcmag.com/why_os_x_106_snow_leopard_should_leave_powerpc_in_the_cold.htm - scrolls the wrong
+  window with j/k (the green slashdot thing for me).
 
 FEATURES:
 8 middleclick in content == p, and if command line is open, paste there the clipboard buffer
